# back-end/src/controllers/links/index.ts
@@ -3,21 +3,19 @@ import { Router } from "express";
 import linksGET from "./links-GET";
 import linksPOST from "./links-POST";
 import linksIdGET from "./links.id-GET";
-import linkIdVerifyPOST from "./links.id.verify-POST";
 import errorHandler from "./errorHandler";
 
 import { wrapAsync } from "../../libs/wrapAync";
 import { checkJwt } from "../../libs/checkJwt";
+import cors from "cors";
 
 const router = Router();
 
-router.post("/v0/links", checkJwt, wrapAsync(linksPOST));
+router.post("/v0/links", cors(), checkJwt, wrapAsync(linksPOST));
 
-router.get("/v0/links", checkJwt, wrapAsync(linksGET));
+router.get("/v0/links", cors(), checkJwt, wrapAsync(linksGET));
 
-router.get("/v0/links/:id", checkJwt, wrapAsync(linksIdGET));
-
-router.post("/v0/links/:id/verify", wrapAsync(linkIdVerifyPOST));
+router.get("/v0/links/:id", cors(), checkJwt, wrapAsync(linksIdGET));
 
 //TODO
 // router.patch(
